js/js.translator/testData/incremental/invalidation/interfaceOpenMethods/lib1/InterfaceA.0.kt
interface A {
    fun testA1() = 1
}
